<?xml version="1.0"?>
<package format="2">
  <name>rwrc23_stop_line_detector</name>
  <version>0.0.0</version>
  <description>The rwrc23_stop_line_detector package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
</package>
